# home-automation

./: .gitignore  README.md
playbooks/: .minecraft-server.yml.swp  mcrcon.yml  minecraft-server.yml  profile.yml  requirements.yml
scripts/: discord-mineshaft.sh  monitor-minecraft-logs.sh  track-speedrunner.sh
scripts/logs/: Cargo.toml
scripts/logs/src/: main.rs
scripts/mineshaft-bot/: Cargo.toml
scripts/mineshaft-bot/src/: main.rs
setup/: ansible.sh  mcrcon.sh  minecraft.sh  profile.sh
